# Restaurant

./: Idées.py  main.py  pyproject.toml
classes/: Boisson.py  Boissons.py  Command.py  Plat.py
dialogs/: Command.py  Dialog.py  commands.py
sheetsImport/: boissonsCarte.py  platsCarte.py
