[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Cyril Anaclet <cyrilzak31@gmail.com>"]
description = ""
name = "restaurant"
version = "0.1.0"
[tool.poetry.dependencies]
colorama = "^0.4.3"
gspread = "^3.4"
oauth2client = "^4.1"
python = "^3.7"
[tool.poetry.dev-dependencies]
